--- a/educacio/WebContent/WEB-INF/web.xml
+++ b/educacio/WebContent/WEB-INF/web.xml
@@ -10,4 +10,11 @@
       <res-type>javax.sql.DataSource</res-type>
       <res-auth>Container</res-auth>
   </resource-ref>
+  
+    <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>jdbc/dbgood</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
